[package]
name = "raytracer"
version = "0.1.0"
authors = ["maxkl <max@maxkl.de>"]
edition = "2018"

[features]
wasm-bindgen = ["rand/wasm-bindgen"]

[dependencies]
cgmath = { version = "0.17.0", features = ["serde"] }
serde = { version = "1.0.114", features = ["derive"] }
rand = "0.7.3"
rand_distr = "0.2.2"
once_cell = "1.4.0"
